--- a/components/Author/AuthorNumbersComponent/AuthorNumbers.module.scss
+++ b/components/Author/AuthorNumbersComponent/AuthorNumbers.module.scss
@@ -3,7 +3,7 @@
     align-items: center;
     gap: 30px;
     font-size: 17px;
-    color: $secondary-foreground-color;
+    color: $foreground-color-2;
 
     & > * {
         display: flex;
