--- a/components/FooterComponent/Footer.module.scss
+++ b/components/FooterComponent/Footer.module.scss
@@ -14,12 +14,7 @@
         display: flex;
         flex-direction: column;
         justify-content: end;
-        color: rgba(255, 255, 255, 0.5);
-
-        hr {
-            width: 100%;
-            height: 1px;
-        }
+        color: $foreground-color-3;
 
         h5 {
             margin: 30px 50px;
