--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -10,7 +10,7 @@ body {
     max-width: 100vw;
     overflow-x: hidden;
     background-color: $background-color;
-    color: $foreground-color;
+    color: $foreground-color-1;
 }
 
 a {
